syntax = "proto3";

package connect;

// The Customer service definition.
service AgentConnect {
    rpc ConnectAgent(ConnectRequest) returns (ConnectResponse) {}
}

message ConnectRequest {
    string token = 1;
}
message ConnectResponse {
    bool success = 2;
}